improved some html tags and styled some classes

--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
           <header class="phoneHeader">
             <div>
               <p><</p>
-              <div class="avatar"></div>
+              <div class="avatar">
+                <img src="./images/avatar.jpg" alt="Avatar Image" />
+              </div>
               <div>
                 <h2 class="name">Samuel Green</h2>
                 <h3 class="status">Available to Walk</h3>
