work onStyles / add transluscent white in html

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
               <h2 class="name">Samuel Green</h2>
               <h3 class="status">Available to Walk</h3>
             </div>
-            <div>
+            <div class="three-dots">
               <div class="circle"></div>
               <div class="circle"></div>
               <div class="circle"></div>
@@ -64,12 +64,13 @@
             <label>1 hour walk </label>
             <p>$49</p>
           </label>
+          <hr>
           <div class="input">
             <input type="text" name="message" placeholder="Type a message… ">
             <button>
               <div class="greater-symbol">></div>
-              >
-            </button></input>
+            </button>
+            </input>
           </div>
         </main>
       </div>
