improve styles - mobile version

--- a/index.html
+++ b/index.html
@@ -15,8 +15,12 @@
 </head>
 
 <body>
+  <div class="bg-shapes">
+    <div class="bg-shape-violet"></div>
+    <div class="bg-shape-grey"></div>
+  </div>
   <!-- <header><nav></nav></header> -->
-  <main>
+  <main class="main-container">
     <section class="phone">
       <div class="screen">
         <header class="phoneHeader">
