add chat animation

--- a/index.html
+++ b/index.html
@@ -40,30 +40,78 @@
         </header>
         <div class="screen-top"></div>
         <main class="chat">
-          <p class="grey-chat recieved">
+          <div class="grey-chat">
+            <div class="typing-dots">
+              <div class="typing typing-1"></div>
+              <div class="typing typing-2"></div>
+              <div class="typing typing-3"></div>
+            </div>
+          </div>
+          <p class="grey-chat received">
             That sounds great. I’d be happy with that.
           </p>
-          <p class="grey-chat recieved">
+          <div class="grey-chat">
+            <div class="typing-dots">
+              <div class="typing typing-1"></div>
+              <div class="typing typing-2"></div>
+              <div class="typing typing-3"></div>
+            </div>
+          </div>
+          <p class="grey-chat received">
             Could you send over some pictures of your dog, please?
           </p>
+          <div class="white-chat">
+            <p>
+              <p class="typing-dots">
+                <div class="typing typing-1"></div>
+                <div class="typing typing-2"></div>
+                <div class="typing typing-3"></div>
+              </p>
+            </p>
+          </div>
           <div class="photos sent">
             <img src="./images/dog-image-1.jpg" alt="dog-image-1" /><img src="./images/dog-image-2.jpg"
               alt="Dog Image 2" /><img src="./images/dog-image-3.jpg" alt="Dog Image" />
           </div>
-          <p class="whiteChat sent">
+          <div class="white-chat">
+            <p>
+              <p class="typing-dots">
+                <div class="typing typing-1"></div>
+                <div class="typing typing-2"></div>
+                <div class="typing typing-3"></div>
+              </p>
+            </p>
+          </div>
+          <p class="white-chat sent">
             Here are a few pictures. She’s a happy girl!
           </p>
-          <p class="whiteChat sent">Can you make it?</p>
-          <p class="grey-chat recieved">
+          <div class="white-chat">
+            <p>
+              <div class="typing-dots">
+                <div class="typing typing-1"></div>
+                <div class="typing typing-2"></div>
+                <div class="typing typing-3"></div>
+              </div>
+            </p>
+          </div>
+          <p class="white-chat sent">Can you make it?</p>
+          <div class="grey-chat">
+            <p class="typing-dots">
+              <div class="typing typing-1"></div>
+              <div class="typing typing-2"></div>
+              <div class="typing typing-3"></div>
+            </p>
+          </div>
+          <p class="grey-chat received">
             She looks so happy! The time we discussed works. How long shall I
             take her out for?
           </p>
-          <label for="op30m" class="option recieved">
+          <label for="op30m" class="option received">
             <input type="radio" name="option" id="op30m" />
             <label>30 minute walk </label>
             <p>$29</p>
           </label>
-          <label class="option recieved" for="op1h">
+          <label class="option received" for="op1h">
             <input type="radio" name="option" id="op1h" />
             <label>1 hour walk </label>
             <p>$49</p>
