finish radio buttons and improve on overall styles

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     rel="stylesheet" />
   <link rel="stylesheet" href="index.css" />
   <title>Frontend Mentor | Chat app CSS illustration</title>
+  <!-- Chat app CSS illustration Master -->
 </head>
 
 <body>
@@ -108,12 +109,12 @@
           </p>
           <label for="op30m" class="option received">
             <input type="radio" name="option" id="op30m" />
-            <label>30 minute walk </label>
+            <label for="op30m">30 minute walk </label>
             <p>$29</p>
           </label>
           <label class="option received" for="op1h">
             <input type="radio" name="option" id="op1h" />
-            <label>1 hour walk </label>
+            <label for="op1h">1 hour walk </label>
             <p>$49</p>
           </label>
           <hr>
