--- a/src/index.html
+++ b/src/index.html
@@ -40,7 +40,7 @@
             </div>
         </header>
         <div class="screen-top"></div>
-        <main class="chat">
+        <div class="chat">
           <div class="grey-chat">
             <div class="typing-dots">
               <div class="typing typing-1"></div>
@@ -121,11 +121,10 @@
           <div class="input">
             <input type="text" name="message" placeholder="Type a message… ">
             <button>
-              <div class="greater-symbol">></div>
+              <div class="greater-symbol">&#62;</div>
             </button>
-            </input>
           </div>
-        </main>
+        </div>
       </div>
     </section>
     <section class="paragraph">
